--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "exploration",
   "author": "Alireza Safaierad",
   "keywords": [
-    "gatsby"
+    "fullstacks"
   ],
   "scripts": {
     "develop": "gatsby develop",
@@ -15,16 +15,33 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.13.1",
-    "gatsby-plugin-google-analytics": "^3.14.0",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-plugin-theme-ui": "^0.11.2",
-    "gatsby-source-contentful": "^5.14.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "theme-ui": "^0.11.2"
+    "@emotion/react": "11.4.1",
+    "@fontsource/rajdhani": "4.5.0",
+    "@fullstacksjs/toolbox": "1.4.0",
+    "gatsby": "3.13.1",
+    "gatsby-plugin-gatsby-cloud": "3.2.0",
+    "gatsby-plugin-google-analytics": "3.14.0",
+    "gatsby-plugin-image": "1.14.0",
+    "gatsby-plugin-manifest": "3.14.0",
+    "gatsby-plugin-react-helmet": "4.14.0",
+    "gatsby-plugin-sharp": "3.14.0",
+    "gatsby-plugin-sitemap": "4.10.0",
+    "gatsby-plugin-theme-ui": "0.11.2",
+    "gatsby-source-contentful": "5.14.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-helmet": "6.1.0",
+    "rive-react": "0.0.21",
+    "theme-ui": "0.11.2"
+  },
+  "devDependencies": {
+    "@fullstacksjs/eslint-config": "6.5.2",
+    "eslint": "7.32.0",
+    "prettier": "2.4.1",
+    "typescript": "4.4.3"
+  },
+  "volta": {
+    "node": "16.10.0",
+    "npm": "7.24.1"
   }
 }
