--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@fullstacksjs/eslint-config": "6.5.2",
+    "@types/react-helmet": "6.1.2",
     "eslint": "7.32.0",
     "prettier": "2.4.1",
     "typescript": "4.4.3"
