--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-react-helmet": "4.14.0",
     "gatsby-plugin-sharp": "3.14.0",
     "gatsby-plugin-sitemap": "4.10.0",
+    "gatsby-plugin-svgr": "3.0.0-beta.0",
     "gatsby-plugin-theme-ui": "0.11.2",
     "gatsby-source-contentful": "5.14.0",
     "react": "17.0.1",
