--- a/package.json
+++ b/package.json
@@ -15,35 +15,36 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/react": "11.4.1",
+    "@emotion/react": "11.5.0",
     "@fontsource/rajdhani": "4.5.0",
-    "gatsby": "3.13.1",
+    "gatsby": "3.14.3",
     "gatsby-plugin-gatsby-cloud": "3.2.0",
     "gatsby-plugin-google-analytics": "3.14.0",
-    "gatsby-plugin-image": "1.14.0",
+    "gatsby-plugin-image": "1.14.1",
     "gatsby-plugin-manifest": "3.14.0",
     "gatsby-plugin-react-helmet": "4.14.0",
-    "gatsby-plugin-sharp": "3.14.0",
+    "gatsby-plugin-sharp": "3.14.1",
     "gatsby-plugin-sitemap": "4.10.0",
     "gatsby-plugin-svgr": "3.0.0-beta.0",
-    "gatsby-plugin-theme-ui": "0.11.2",
-    "gatsby-source-contentful": "5.14.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "gatsby-plugin-theme-ui": "0.11.3",
+    "gatsby-source-contentful": "5.14.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
-    "rive-react": "0.0.21",
-    "theme-ui": "0.11.2"
+    "rive-react": "0.0.22",
+    "theme-ui": "0.11.3"
   },
   "devDependencies": {
-    "@fullstacksjs/eslint-config": "6.5.2",
-    "@fullstacksjs/toolbox": "1.4.0",
-    "@types/react-helmet": "6.1.2",
+    "@fullstacksjs/eslint-config": "6.8.2",
+    "@fullstacksjs/toolbox": "2.0.2",
+    "@svgr/webpack": "5.5.0",
+    "@types/react-helmet": "6.1.4",
     "eslint": "7.32.0",
     "prettier": "2.4.1",
-    "typescript": "4.4.3"
+    "typescript": "4.4.4"
   },
   "volta": {
     "node": "16.10.0",
-    "npm": "7.24.1"
+    "npm": "8.1.0"
   }
 }
