--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@atomic-layout/emotion": "0.16.2",
     "@emotion/react": "11.5.0",
+    "@emotion/styled": "11.3.0",
     "@fontsource/rajdhani": "4.5.0",
     "gatsby": "3.14.3",
     "gatsby-plugin-gatsby-cloud": "3.2.0",
