--- a/package.json
+++ b/package.json
@@ -1,52 +1,31 @@
 {
   "name": "exploration",
-  "version": "1.0.0",
   "private": true,
-  "description": "exploration",
-  "author": "Alireza Safaierad",
-  "keywords": [
-    "fullstacks"
-  ],
+  "description": "Fullstacks Exploration Project",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@atomic-layout/emotion": "0.16.2",
-    "@emotion/react": "11.5.0",
-    "@emotion/styled": "11.3.0",
     "@fontsource/rajdhani": "4.5.0",
-    "gatsby": "3.14.3",
-    "gatsby-plugin-gatsby-cloud": "3.2.0",
-    "gatsby-plugin-google-analytics": "3.14.0",
-    "gatsby-plugin-image": "1.14.1",
-    "gatsby-plugin-manifest": "3.14.0",
-    "gatsby-plugin-react-helmet": "4.14.0",
-    "gatsby-plugin-sharp": "3.14.1",
-    "gatsby-plugin-sitemap": "4.10.0",
-    "gatsby-plugin-svgr": "3.0.0-beta.0",
-    "gatsby-plugin-theme-ui": "0.11.3",
-    "gatsby-source-contentful": "5.14.1",
+    "@fullstacksjs/toolbox": "2.8.3",
+    "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "6.1.0",
-    "rive-react": "0.0.22",
-    "theme-ui": "0.11.3"
+    "rive-react": "0.0.25",
+    "theme-ui": "0.12.0"
   },
   "devDependencies": {
-    "@fullstacksjs/eslint-config": "6.8.2",
-    "@fullstacksjs/toolbox": "2.0.2",
+    "@fullstacksjs/eslint-config": "6.10.0",
     "@svgr/webpack": "5.5.0",
-    "@types/react-helmet": "6.1.4",
-    "eslint": "7.32.0",
+    "@types/react": "17.0.34",
+    "@types/react-dom": "17.0.11",
+    "eslint": "7",
+    "eslint-config-next": "12.0.3",
     "prettier": "2.4.1",
     "typescript": "4.4.4"
-  },
-  "volta": {
-    "node": "16.10.0",
-    "npm": "8.1.0"
   }
 }
