--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/rajdhani": "4.5.0",
     "@fullstacksjs/toolbox": "2.8.3",
     "next": "12.0.3",
+    "next-auth": "4.0.0-next.26",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rive-react": "0.0.25",
