--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --require dotenv/config --config codegen.yml"
   },
   "dependencies": {
     "@atomic-layout/emotion": "0.16.2",
     "@fontsource/rajdhani": "4.5.0",
     "@fullstacksjs/toolbox": "2.8.3",
+    "graphql": "15",
+    "graphql-request": "3.6.1",
     "next": "12.0.3",
     "next-auth": "4.0.0-next.26",
     "react": "17.0.2",
@@ -21,9 +24,15 @@
   },
   "devDependencies": {
     "@fullstacksjs/eslint-config": "6.10.0",
+    "@graphql-codegen/cli": "2.3.0",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.4.0",
+    "@graphql-codegen/typescript-graphql-request": "4.3.0",
+    "@graphql-codegen/typescript-operations": "2.2.0",
     "@svgr/webpack": "5.5.0",
     "@types/react": "17.0.34",
     "@types/react-dom": "17.0.11",
+    "dotenv": "10.0.0",
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "prettier": "2.4.1",
