--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "strictPropertyInitialization": false,
     "module": "ESNext",
     "lib": ["DOM", "ESNext.Intl", "ES2020"],
