--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ GITHUB_ID=
 GITHUB_SECRET=
 NEXT_DATOCMS_API_TOKEN=
 SCHEMA_URL=
+DATABASE_URL=mysql://root@127.0.0.1:3309/exploration
+DATABASE_URL_SHADOW=mysql://root@127.0.0.1:3308/exploration
