--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@atomic-layout/emotion": "0.16.2",
     "@fontsource/rajdhani": "4.5.0",
     "@fullstacksjs/toolbox": "2.8.3",
+    "@prisma/client": "3.5.0",
     "graphql": "15",
     "graphql-request": "3.6.1",
     "next": "12.0.3",
@@ -36,6 +37,8 @@
     "eslint": "7",
     "eslint-config-next": "12.0.3",
     "prettier": "2.4.1",
+    "prisma": "3.5.0",
+    "ts-node": "10.4.0",
     "typescript": "4.4.4"
   }
 }
