--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rive-react": "0.0.25",
+    "swr": "1.0.1",
     "theme-ui": "0.12.0"
   },
   "devDependencies": {
