--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --require dotenv/config --config codegen.yml"
+    "codegen": "graphql-codegen --require dotenv/config --config codegen.yml",
+    "gen": "prisma generate"
   },
   "dependencies": {
     "@atomic-layout/emotion": "0.16.2",
     "@fontsource/rajdhani": "4.5.0",
     "@fullstacksjs/toolbox": "2.8.3",
     "@prisma/client": "3.5.0",
+    "axios": "0.24.0",
     "graphql": "15",
     "graphql-request": "3.6.1",
     "next": "12.0.3",
     "next-auth": "4.0.0-next.26",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "rive-react": "0.0.25",
-    "swr": "1.0.1",
+    "react-query": "3.34.5",
+    "rive-react": "0.0.29",
     "theme-ui": "0.12.0"
   },
   "devDependencies": {
@@ -41,5 +43,9 @@
     "prisma": "3.5.0",
     "ts-node": "10.4.0",
     "typescript": "4.4.4"
+  },
+  "volta": {
+    "node": "16.13.1",
+    "npm": "8.3.0"
   }
 }
