feat: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
   "dependencies": {
     "@atomic-layout/emotion": "0.16.2",
     "@fontsource/rajdhani": "4.5.0",
-    "@fullstacksjs/toolbox": "2.8.3",
+    "@fullstacksjs/toolbox": "2.9.1",
     "@prisma/client": "3.5.0",
     "axios": "0.24.0",
     "graphql": "15",
     "graphql-request": "3.6.1",
-    "next": "12.0.3",
-    "next-auth": "4.0.0-next.26",
+    "next": "12.0.7",
+    "next-auth": "4.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "3.34.5",
     "rive-react": "0.0.29",
-    "theme-ui": "0.12.0"
+    "theme-ui": "0.12.1"
   },
   "devDependencies": {
-    "@fullstacksjs/eslint-config": "6.10.0",
+    "@fullstacksjs/eslint-config": "7.0.3",
     "@graphql-codegen/cli": "2.3.0",
     "@graphql-codegen/introspection": "2.1.0",
-    "@graphql-codegen/typescript": "2.4.0",
-    "@graphql-codegen/typescript-graphql-request": "4.3.0",
-    "@graphql-codegen/typescript-operations": "2.2.0",
+    "@graphql-codegen/typescript": "2.4.1",
+    "@graphql-codegen/typescript-graphql-request": "4.3.2",
+    "@graphql-codegen/typescript-operations": "2.2.1",
     "@svgr/webpack": "5.5.0",
-    "@types/react": "17.0.34",
+    "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "dotenv": "10.0.0",
-    "eslint": "7",
-    "eslint-config-next": "12.0.3",
-    "prettier": "2.4.1",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
+    "prettier": "2.5.1",
     "prisma": "3.5.0",
     "ts-node": "10.4.0",
-    "typescript": "4.4.4"
+    "typescript": "4.5.4"
   },
   "volta": {
     "node": "16.13.1",
