--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --require dotenv/config --config codegen.yml",
+    "codegen": "dotenv -e .env.local graphql-codegen --config codegen.yml",
     "gen": "prisma generate"
   },
   "dependencies": {
@@ -27,7 +27,7 @@
     "theme-ui": "0.12.1"
   },
   "devDependencies": {
-    "@fullstacksjs/eslint-config": "7.0.3",
+    "@fullstacksjs/eslint-config": "7.1.0",
     "@graphql-codegen/cli": "2.3.0",
     "@graphql-codegen/introspection": "2.1.0",
     "@graphql-codegen/typescript": "2.4.1",
@@ -37,6 +37,7 @@
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "dotenv": "10.0.0",
+    "dotenv-cli": "4.1.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "prettier": "2.5.1",
