--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ GITHUB_ID=
 GITHUB_SECRET=
 NEXT_DATOCMS_API_TOKEN=
 SCHEMA_URL=
+DATOCMS_AUTH_PASSWORD=
+DATOCMS_AUTH_USERNAME=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000/
 DATABASE_URL=mysql://root@127.0.0.1:3309/exploration
