--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
     "@fullstacksjs/eslint-config/nextjs",
     "@fullstacksjs/eslint-config/typescript",
     "next/core-web-vitals"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/naming-convention": "off"
+  }
 }
