--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exploration",
   "private": true,
   "description": "Fullstacks Exploration Project",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,25 +16,25 @@
     "@fontsource/rajdhani": "4.5.0",
     "@fullstacksjs/toolbox": "2.10.0",
     "@prisma/client": "3.8.1",
-    "axios": "0.24.0",
-    "graphql": "15",
-    "graphql-request": "3.6.1",
+    "axios": "0.25.0",
+    "graphql": "16.2.0",
+    "graphql-request": "3.7.0",
     "graphql-tag": "2.12.6",
     "next": "12.0.8",
     "next-auth": "4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.5",
-    "rive-react": "0.0.29",
-    "theme-ui": "0.12.1"
+    "react-query": "3.34.11",
+    "rive-react": "0.0.31",
+    "theme-ui": "0.13.1"
   },
   "devDependencies": {
     "@fullstacksjs/eslint-config": "7.2.1",
-    "@graphql-codegen/cli": "2.3.0",
-    "@graphql-codegen/introspection": "2.1.0",
-    "@graphql-codegen/typescript": "2.4.1",
-    "@graphql-codegen/typescript-graphql-request": "4.3.2",
-    "@graphql-codegen/typescript-operations": "2.2.1",
+    "@graphql-codegen/cli": "2.4.0",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.2",
+    "@graphql-codegen/typescript-graphql-request": "4.3.3",
+    "@graphql-codegen/typescript-operations": "2.2.2",
     "@svgr/webpack": "6.2.0",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
