--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       args:
         - NEXTAUTH_URL=${NEXTAUTH_URL}
         - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+        - NEXT_DATOCMS_API_TOKEN=${NEXT_DATOCMS_API_TOKEN}
     ports:
       - 3000:3000
     env_file:
