--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@atomic-layout/emotion": "0.16.2",
+    "@emotion/react": "11.7.1",
     "@fontsource/rajdhani": "4.5.0",
     "@fullstacksjs/toolbox": "2.10.0",
     "@prisma/client": "3.8.1",
