update deps and fix build errors

--- a/.env
+++ b/.env
@@ -6,5 +6,4 @@ DATOCMS_AUTH_PASSWORD=
 DATOCMS_AUTH_USERNAME=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000/
-DATABASE_URL=mysql://root@127.0.0.1:3309/exploration
-DATABASE_URL_SHADOW=mysql://root@127.0.0.1:3308/exploration
+DATABASE_URL=
