--- a/package.json
+++ b/package.json
@@ -7,45 +7,45 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "codegen": "dotenv -e .env.local graphql-codegen --config codegen.yml",
     "gen": "prisma generate"
   },
   "dependencies": {
     "@atomic-layout/emotion": "0.16.2",
-    "@emotion/react": "11.7.1",
-    "@fontsource/rajdhani": "4.5.0",
-    "@fullstacksjs/toolbox": "2.10.0",
-    "@prisma/client": "3.8.1",
+    "@emotion/react": "11.8.2",
+    "@fontsource/rajdhani": "4.5.5",
+    "@fullstacksjs/toolbox": "2.14.1",
+    "@mdx-js/react": "1.6.22",
+    "@prisma/client": "3.11.1",
     "axios": "0.25.0",
     "graphql": "16.2.0",
     "graphql-request": "3.7.0",
     "graphql-tag": "2.12.6",
-    "next": "12.0.8",
+    "next": "12.1.4",
     "next-auth": "4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "3.34.11",
-    "rive-react": "0.0.31",
-    "theme-ui": "0.13.1"
+    "rive-react": "1.0.3",
+    "theme-ui": "0.14.2"
   },
   "devDependencies": {
-    "@fullstacksjs/eslint-config": "7.2.1",
-    "@graphql-codegen/cli": "2.4.0",
+    "@fullstacksjs/eslint-config": "8.3.0",
+    "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/introspection": "2.1.1",
-    "@graphql-codegen/typescript": "2.4.2",
-    "@graphql-codegen/typescript-graphql-request": "4.3.3",
-    "@graphql-codegen/typescript-operations": "2.2.2",
-    "@svgr/webpack": "6.2.0",
-    "@types/react": "17.0.38",
-    "@types/react-dom": "17.0.11",
-    "dotenv-cli": "4.1.1",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "prettier": "2.5.1",
-    "prisma": "3.8.1",
-    "ts-node": "10.4.0",
-    "typescript": "4.5.5"
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-graphql-request": "4.4.5",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@svgr/webpack": "6.2.1",
+    "@types/react": "17.0.43",
+    "@types/react-dom": "17.0.14",
+    "dotenv-cli": "5.1.0",
+    "eslint": "8.12.0",
+    "prettier": "2.6.2",
+    "prisma": "3.11.1",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3"
   },
   "volta": {
     "node": "16.13.1",
