--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && cp config/nginx.con .next",
     "start": "next start",
     "lint": "eslint .",
     "codegen": "dotenv -e .env.local graphql-codegen --config codegen.yml",
